opam-version: "2.0"
synopsis: "ppx to reduce boilerplate from react-intl messages"
description: """
This ppx allows you to create ReactIntl.messages records without
specifying id, which significantly reduces the amount of boilerplate code
and simplifies the translation process.
"""
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
homepage: "https://github.com/ahrefs/bs-react-intl-ppx"
bug-reports: "https://github.com/ahrefs/bs-react-intl-ppx/issues"
depends: [
  "ocaml" {= "4.14.0"}
  "dune" {>= "3.0"}
  "reason" {= "3.8.1"}
  "ppxlib" {>= "0.27.0"}
  "re" {= "1.10.4"}
  "ocaml-lsp-server" {dev}
  "ocamlformat" {dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/ahrefs/bs-react-intl-ppx.git"
